--- a/9-monitoring/0_services/docker-compose.yml
+++ b/9-monitoring/0_services/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3"
 
 services:
   consul:
-    image: consul
+    image: hashicorp/consul
     ports:
       - "8500:8500"
   vault:
-    image: vault
+    image: hashicorp/vault
     environment:
       VAULT_DEV_ROOT_TOKEN_ID: 123
     ports:
@@ -31,12 +31,12 @@ services:
     command:
       - "--listen.addr=0.0.0.0:8080"
     environment:
-      ALERTMANAGER_URL: http://alertmanager:9093
+      ALERTMANAGER_URL: http://alertmanager:8080
       BOLT_PATH: /data/bot.db
       STORE: bolt
       TEMPLATE_PATHS: /templates/default.tmpl
-      TELEGRAM_ADMIN: 164626023
-      TELEGRAM_TOKEN: 997404236:AAGB0453GmnqkD2vhFmz6I8Iq0YRlOut8HE
+      TELEGRAM_ADMIN: 5716334396
+      TELEGRAM_TOKEN: AAEPbCYjlmumxO_USdfRhFKdMCLpM8wVuyo
     volumes:
       - "./alertmanager-bot/templates:/templates"
   jaeger:
@@ -44,3 +44,37 @@ services:
     ports:
       - "6831:6831/udp"
       - "16686:16686"
+  grafana:
+    # Change latest with your target version, if needed
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000/tcp
+    volumes:
+      # Use your plugin folder (e.g. redshift-datasource)
+      - ./dist:/var/lib/grafana/plugins/<plugin-folder>
+      - ./provisioning:/etc/grafana/provisioning
+    environment:
+      - TERM=linux
+      - GF_LOG_LEVEL=debug
+      - GF_DATAPROXY_LOGGING=true
+      - GF_DEFAULT_APP_MODE=development
+  node-exporter:
+    image: prom/node-exporter
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    container_name: exporter
+    hostname: exporter
+    command:
+      - --path.procfs=/host/proc
+      - --path.sysfs=/host/sys
+      - --collector.filesystem.ignored-mount-points
+      - ^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)
+    ports:
+      - 9100:9100
+    restart: unless-stopped
+    environment:
+      TZ: "Europe/Moscow"
+    networks:
+      - default
