--- a/9-monitoring/0_services/prometheus/prometheus.yml
+++ b/9-monitoring/0_services/prometheus/prometheus.yml
@@ -3,6 +3,10 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
+  - job_name: docker_exporter
+    static_configs:
+      - targets: ['node-exporter:9100']
+
   - job_name: 'golang'
     static_configs:
       - targets: ['docker.for.mac.localhost:8080']
